[package]
name = "config_relation"
description = "Test config-related functions"
authors = ["Ruilin Zhao"]
version = "0.1.0"
edition = "2018"

[[bin]]
name = "config_relation"
path = "src/main.rs"

[dependencies]
healer_core = {path = "../../healer_core"}
syz_wrapper = {path = "../../syz_wrapper"}
healer_alloc = {path = "../../healer_utils/healer_alloc"}
rand = {version = "0.8", features = ["small_rng"]}
env_logger = "0.9"
log = "0.4"
structopt = "0.3"